# ses-smtp-credentials

./: LICENSE  README.md  pyproject.toml
ses_smtp_credentials/: cli.py  constants.py  lib.py
