[tool.poetry]
name = "ses-smtp-credentials"
version = "0.3.2"
description = ""
authors = ["Ben Bridts"]

[tool.poetry.dependencies]
python = "^3.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ses-smtp-credentials = 'ses_smtp_credentials.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 118

